# plasma-applet-active-window-control

./: .gitignore  CMakeLists.txt  README.md  install.sh
arch-linux/: PKGBUILD
lib/: CMakeLists.txt  activewindowcontrolapplet.cpp  activewindowcontrolapplet.h
org.kde.activeWindowControl/: metadata.desktop
org.kde.activeWindowControl/contents/config/: config.qml  main.xml
org.kde.activeWindowControl/contents/ui/: ConfigAppearance.qml  ControlButton.qml  main.qml
org.kde.activeWindowControl/contents/ui/config/: ConfigButtons.qml  ConfigMouseControl.qml
package/: metadata.desktop
package/contents/config/: config.qml  main.xml
package/contents/icons/breeze-dark/: close.svgz  maximize.svgz  minimize.svgz  pin.svgz
package/contents/icons/default/: close.svgz  maximize.svgz  minimize.svgz  pin.svgz
package/contents/ui/: AppMenu.qml  ControlButton.qml  main.qml  main.qml.bak
package/contents/ui/config/: ConfigAppMenu.qml  ConfigAppearance.qml  ConfigBehaviour.qml  ConfigButtons.qml  ConfigMouseControl.qml  IconPicker.qml  OrderableItem.qml  OrderableListView.qml
plugin/: CMakeLists.txt  README  activewindowcontrolplugin.cpp  activewindowcontrolplugin.h  appmenumodel.cpp  qmldir
translations/: CMakeLists.txt  Messages.sh  TRANSLATORS_README  update-translations.sh
translations/po/: plasma_applet_org.kde.activeWindowControl.pot  plasma_applet_org.kde.activeWindowControl_cs.po  plasma_applet_org.kde.activeWindowControl_el.po  plasma_applet_org.kde.activeWindowControl_en.po  plasma_applet_org.kde.activeWindowControl_es_ES.po  plasma_applet_org.kde.activeWindowControl_ru.po  plasma_applet_org.kde.activeWindowControl_zh_CN.po
